# uniDINO

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  inference.py  pyproject.toml  run_dino.sh  run_dino_inference.sh  train_dino.py  unidino_csbj.yml
figures/bbbc021/: bbbc021_figures.py
figures/cell_health/: cell_health_figures.py
figures/insect/: Farbcodes.xlsx  cluster_biological_annot.xlsx  cluster_selected_conc_P1-P3.xlsx  cluster_selected_conc_P4-P6.xlsx  insect_figures.py
figures/jumpcp/: jumpcp_metrics.py
source/: __init__.py  augment.py  eval.py  image_ops.py  inference_utils.py  io.py  microsnoop.py  models.py  path.py  utils.py
source/dino/: loss.py  utils.py  vision_transformer.py
